imp: 优化