@@ -1,7 +1,8 @@
 package org.voovan.tools;
 
 import org.voovan.tools.log.Logger;
-import jdk.internal.misc.Unsafe;
+import sun.misc.Unsafe;
+
 import java.lang.reflect.Field;
 import java.lang.reflect.Modifier;
 import java.util.concurrent.ConcurrentHashMap;
